add delete constraints on foreignkeys in migrations along with some model attribute changes

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -22,3 +22,8 @@
 ::-webkit-scrollbar-thumb:hover {
     background: #DB2777;
 }
+
+/* dropdown btn */
+.dropdown:focus-within .dropdown-menu {
+    display: block;
+}
